--- a/templates/input.html
+++ b/templates/input.html
@@ -26,7 +26,11 @@
         </div>
         <div class="input-block">
             <img src="static/images/class.png" alt="class">
-            <input type="text" name="class" maxlength="100" placeholder="please input your class"><br/>
+            <input type="text" name="class" maxlength="100" placeholder="please input your class" list="lab"><br/>
+                <datalist id="lab">
+                    <option value="计1601"/>
+                    <option value="计1602"/>
+                </datalist>
         </div>
             <input class ="submit-block" type="submit" value="签到" id="su" class="btn self-btn bg s_btn">
     </form>
